04 fix size img home, fix logo button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <style>
             .col-lg-6>img {
                   border-radius: 5%;
+                  width: 80%;
             }
       </style>
 </head>
