--- a/places.html
+++ b/places.html
@@ -40,7 +40,7 @@
 <body>
       <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container">
-                  <a class="navbar-brand p-0 " href="/"><img src="vv.png" alt="logo" width="40"></a>
+                  <a class="navbar-brand p-0 " href="index.html"><img src="vv.png" alt="logo" width="40"></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
